Fixed Header Overlap
Stopped the header from overlapping with the Todo Input.

--- a/client/src/styles/Header.css
+++ b/client/src/styles/Header.css
@@ -6,6 +6,7 @@ header {
     align-items: center;
     padding: 10px 50px;
     width: 100%;
+    height: 60px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
     position: fixed;
     top: 0;
